--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,12 +4,13 @@ WORKDIR /app
 
 COPY package.json .
 
-RUN npm install
+ARG NODE_ENV
+
+RUN if [ "$NODE_ENV" = "development" ]; \
+    then npm install; \
+    else npm install --production; \
+    fi
 
 COPY . ./
 
-ENV PORT 3000
-
-EXPOSE ${PORT}
-
-CMD ["npm", "run", "dev"]
+CMD ["npm", "start"]
