Adding some instructions in sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
-# !OBS! Envinoment variables only for building containers. !OBS!¨
+# Remove .sample or create own .env file before use.
 #
+#
+# !OBS! Envinoment variables only for building containers. !OBS!¨
 # These variables are used for building containers.
 # Variables for app are declared
 # in "./[specific-app]/config/.env"
