Adding mongo and teste env in dev

--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,8 @@
 
 ## Name of app/container
 BACKEND_APP_NAME=backend-app
+MONGO_ROOT_USERNAME=root
+MONGO_ROOT_PASSWORD=P@ssword123!
 
 # Development envs
 DEV_BACKEND_PORT=3000
